fix: Replace the css property margin with gap for some elements in ./src/components/Header/Navigation/Navigation.css

--- a/src/components/Header/Navigation/Navigation.css
+++ b/src/components/Header/Navigation/Navigation.css
@@ -11,14 +11,7 @@
   list-style-type: none;
   display: flex;
   align-items: center;
-}
-
-.navigation__menu-item {
-  margin: 0 16px 0 0;
-}
-
-.navigation__menu-item:last-child {
-  margin: 0;
+  gap: 16px;
 }
 
 .navigation__link{
@@ -47,10 +40,10 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  gap: 30px;
 }
 
 .auth-navigation__link {
-  margin: 0 30px 0 0;
   text-decoration: none;
   color: #000;
   font-size: 12px;
